Fix profile name in trending buttons alignment

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -317,9 +317,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .trending-btn-profile {
+  text-align: left;
   font-size: 0.8rem;
   font-weight: 500;
-  margin-left: -0.25rem;
 }
 
 .trending-btn-project {
